переход на новый генератор ридми

--- a/steinschliff/templates/intro_ru.jinja2
+++ b/steinschliff/templates/intro_ru.jinja2
@@ -75,9 +75,10 @@ Awesome Steinschliff — это не просто таблица с штайнш
 * [тема форума на скиспорте](https://www.skisport.ru/forum/cross-country/104594)
 * [чат в Telegram](https://t.me/+wddxUugE0gwxMGU6)
 
-## Полезные видое и статьи
+## Полезные видео и статьи
 
 * [процесс шлифования на сервисе Vuerich Service](https://youtu.be/YPfnXsF2QJg?si=CDNXJfvW0YkthP9a)
-* [обзор редких стрктур Рамзау](https://vkvideo.ru/video-220482174_456239484)
+* [обзор редких структур Рамзау](https://vkvideo.ru/video-220482174_456239484)
 * [обзор штайншлифта в ЭкипТайме](https://www.youtube.com/watch?v=IN1FKSIZT2I)
 * [статья про штайншлифт и структуры](https://training365.ru/shtajnshlift-i-struktury/)
+
