Добавил стуктуры экиптайма

--- a/steinschliff/templates/intro_ru.jinja2
+++ b/steinschliff/templates/intro_ru.jinja2
@@ -77,8 +77,11 @@ Awesome Steinschliff — это не просто таблица с штайнш
 
 ## Полезные видео и статьи
 
-* [процесс шлифования на сервисе Vuerich Service](https://youtu.be/YPfnXsF2QJg?si=CDNXJfvW0YkthP9a)
-* [обзор редких структур Рамзау](https://vkvideo.ru/video-220482174_456239484)
-* [обзор штайншлифта в ЭкипТайме](https://www.youtube.com/watch?v=IN1FKSIZT2I)
-* [статья про штайншлифт и структуры](https://training365.ru/shtajnshlift-i-struktury/)
+* [Сегей Лопухин в Эстонии](https://vkvideo.ru/video-220482174_456239484)
+* [Заводской штайншлифт Salomon Atomic в ЭКИПИОН!](https://www.youtube.com/watch?v=txEHphQSFjk)
+* [Процесс шлифования на сервисе Vuerich Service](https://youtu.be/YPfnXsF2QJg?si=CDNXJfvW0YkthP9a)
+* [Обзор редких структур Рамзау](https://vkvideo.ru/video-220482174_456239484)
+* [Обзор штайншлифта в ЭкипТайме](https://www.youtube.com/watch?v=IN1FKSIZT2I)
+* [Статья про штайншлифт и структуры](https://training365.ru/shtajnshlift-i-struktury/)
+
 
