--- a/steinschliff/templates/header.jinja2
+++ b/steinschliff/templates/header.jinja2
@@ -1,6 +1,6 @@
 {# Шаблон заголовка в зависимости от языка #}
 {% if language == "ru" %}
-{% include "intro_ru.jinja2" %}
+{% include "intro_ru.md" %}
 {% else %}
 A comprehensive guide to ski structures for various weather and snow conditions.
 The goal is to collect experience and make it easier to choose the right structure next season.
