теперь структуры отсортированы от теплых к холодным

--- a/steinschliff/templates/service.jinja2
+++ b/steinschliff/templates/service.jinja2
@@ -41,4 +41,6 @@
 {% endif %}
 {% endif %}
 
+{# Сортируем структуры по выбранному параметру #}
+{% set structures_sorted = service.structures|sort(attribute=sort_by) if sort_by != "temperature" else service.structures %}
 {% include 'table.jinja2' %}
