feat(readme): вывод телефонов списком в блоке контактов - Обновлён шаблон steinschliff/templates/service.jinja2 для рендера телефонов как маркированного списка - Перегенерированы README.md и README_en.md

--- a/steinschliff/templates/service.jinja2
+++ b/steinschliff/templates/service.jinja2
@@ -36,7 +36,10 @@
 * {{ gettext("email") }}: <{{ service.contact.email }}>
 {% endif %}
 {% if service.contact.phones %}
-* {{ gettext("phones") }}: {{ service.contact.phones | map('phone_link') | join(', ') }}
+* {{ gettext("phones") }}:
+{% for p in service.contact.phones %}
+  - {{ p }}
+{% endfor %}
 {% endif %}
 {% endif %}
 
